--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 
 spring:
   application:
-    name: wooden
+    name: eureka
 
 eureka:
   client:
     register-with-eureka: false
     service-url:
-      defaultZone: http://39.106.71.119:8762/merry/,http://39.106.71.119:8763/sunny/
+      defaultZone: http://39.106.71.119:8762/eureka/,http://39.106.71.119:8763/eureka/
     fetch-registry: false
-  server:
-    enable-self-preservation: false
+#  server:
+#    enable-self-preservation: false
